Refactor HTML structure and styles

--- a/index.html
+++ b/index.html
@@ -1,120 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
 <title>Muthaber EDU</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
 <style>
-body {
-  margin:0;
-  font-family: Arial;
-  background: linear-gradient(135deg,#0f766e,#10b981);
-  color:white;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:100vh;
+body{
+font-family:Arial;
+background:#0f766e;
+display:flex;
+align-items:center;
+justify-content:center;
+height:100vh;
 }
-.card {
-  background:white;
-  color:#0f172a;
-  padding:30px;
-  border-radius:20px;
-  width:90%;
-  max-width:400px;
-  text-align:center;
-  box-shadow:0 20px 50px rgba(0,0,0,.2);
+.card{
+background:white;
+padding:30px;
+border-radius:20px;
+width:90%;
+max-width:400px;
+text-align:center;
 }
-input,button {
-  width:100%;
-  padding:15px;
-  margin:10px 0;
-  border-radius:12px;
-  border:none;
+input,button{
+width:100%;
+padding:15px;
+margin:10px 0;
+border-radius:10px;
 }
-button {
-  background:#10b981;
-  color:white;
-  font-size:18px;
-  font-weight:bold;
-}
-.hidden {display:none;}
+button{background:#10b981;color:white;}
 </style>
 </head>
 <body>
 
 <div class="card">
-<h1>Muthaber EDU</h1>
+<h2>Muthaber EDU</h2>
 
-<div id="login">
-<input id="phone" placeholder="رقم هاتف ولي الأمر">
-<button onclick="sendOTP()">تسجيل الدخول</button>
-</div>
+<input id="phone" placeholder="رقم الهاتف أو رقم الطالب">
+<button onclick="login()">دخول</button>
 
-<div id="otp" class="hidden">
-<input id="code" placeholder="رمز التحقق">
-<button onclick="verifyOTP()">تحقق</button>
-</div>
-
-<div id="dashboard" class="hidden">
-<h3 id="userPhone"></h3>
-<h2>رصيدك: <span id="points">0</span> نقطة</h2>
-<button onclick="earn()">حصلت على نقاط</button>
-</div>
-
+<h3 id="points"></h3>
 </div>
 
 <script>
-const firebaseConfig = {
-  apiKey: "AIzaSyAvIPfD8xodfXlfWK6acqygQ0WSy_-E9L8",
-  authDomain: "muthaber-edu.firebaseapp.com",
-  projectId: "muthaber-edu",
-};
+firebase.initializeApp({
+ apiKey:"AIzaSyAvIPfD8xodfXlfWK6acqygQ0WSy_-E9L8",
+ projectId:"muthaber-edu"
+});
 
-firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
-const db = firebase.firestore();
-let confirmationResult;
+const db=firebase.firestore();
 
-function sendOTP(){
-  const phone = document.getElementById("phone").value;
-  window.recaptchaVerifier = new firebase.auth.RecaptchaVerifier('login',{size:'invisible'});
-  auth.signInWithPhoneNumber("+962"+phone,window.recaptchaVerifier).then(res=>{
-    confirmationResult=res;
-    document.getElementById("login").classList.add("hidden");
-    document.getElementById("otp").classList.remove("hidden");
-  });
-}
-
-function verifyOTP(){
-  const code=document.getElementById("code").value;
-  confirmationResult.confirm(code).then(res=>{
-    const user=res.user;
-    document.getElementById("otp").classList.add("hidden");
-    document.getElementById("dashboard").classList.remove("hidden");
-    document.getElementById("userPhone").innerText=user.phoneNumber;
-
-    const ref=db.collection("users").doc(user.uid);
-    ref.get().then(doc=>{
-      if(!doc.exists){
-        ref.set({phone:user.phoneNumber,points:10});
-        document.getElementById("points").innerText=10;
-      } else {
-        document.getElementById("points").innerText=doc.data().points;
-      }
-    });
-  });
-}
-
-function earn(){
-  const user=auth.currentUser;
-  const ref=db.collection("users").doc(user.uid);
-  ref.update({points:firebase.firestore.FieldValue.increment(5)});
-  ref.get().then(d=>document.getElementById("points").innerText=d.data().points+5);
+function login(){
+ const id=document.getElementById("phone").value;
+ db.collection("users").doc(id).get().then(d=>{
+  if(d.exists){
+    document.getElementById("points").innerText="نقاطك: "+d.data().points;
+  } else {
+    db.collection("users").doc(id).set({points:10});
+    document.getElementById("points").innerText="تم إنشاء حسابك – نقاطك 10";
+  }
+ });
 }
 </script>
 
